--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ yarn-error.log*
 
 # vercel
 .vercel
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/nextjs.iml
+.idea/vcs.xml
+yarn.lock
