--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "date-fns": "^2.29.1",
+    "jest": "^28.1.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,8 +19,11 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
