--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "classnames": "^2.3.1",
     "date-fns": "^2.29.1",
     "jest": "^28.1.3",
     "next": "12.2.3",
