--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@heroicons/react": "^1.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.1",
-    "jest": "^28.1.3",
-    "next": "12.2.3",
+    "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
@@ -32,6 +31,8 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "gray-matter": "^4.0.3",
+    "jest": "^29.0.1",
+    "jest-cli": "^29.0.1",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
